<resources>
    <string name="app_name">FakeBnB</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="chat_text">Chat</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="_6987548536">6987548536</string>
    <string name="phone">Phone</string>
    <string name="warning">Warning</string>
    <string name="photo">Photo</string>
    <string name="athens_str_95">Athens str. 95</string>
    <string name="address">Address</string>
    <string name="photo_path_png">photo_path.png</string>
    <string name="save_changes">Save changes</string>
    <string name="become_a_host">Become a host</string>
    <string name="jane">Jane</string>
    <string name="jane_email_com">jane@email.com</string>
    <string name="your_reserv">Your reservation is completed</string>
    <string name="press_below_">Press below to go back to home page</string>
    <string name="home_page">Home page</string>
    <string name="write_your_review">Write your review:</string>
    <string name="add_stars">Add stars at the place you stayed:</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_new_place_text">Add a new place to FakeBnB</string>
    <string name="add_new_place">Add new place</string>
    <string name="delete_place">Delete place</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="amenities">Amenities</string>
    <string name="country">Country</string>
    <string name="default_username">Username</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="rules">Rules</string>
    <string name="description">Description</string>
    <string name="beds">Beds</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="living_rooms">Living rooms</string>
    <string name="area">Area</string>
    <string name="house">House</string>
    <string name="room">Room</string>
    <string name="extra_cost_per_person">Extra cost per person</string>
    <string name="minimum_rental_price">Minimum rental price</string>
    <string name="maximum_visitors">Maximum visitors</string>
    <string name="check_out_date">Check-out date</string>
    <string name="check_in_date">Check-in date</string>
    <string name="dates">Dates</string>
    <string name="modify_your_place_in_fakebnb">Modify your place in FakeBnB</string>
    <string name="rental_type">Rental type</string>
    <string name="photos_of_rental">Photos of rental</string>
    <string name="add_image">Add Image</string>
    <string name="image_of_rental">Image of rental</string>
</resources>