<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:id="@+id/profileParent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/include"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="119dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/profileUserLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Info that is not changeable. At top of the page -->
                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/profileUserUsernameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/jane" />

                <TextView
                    android:id="@+id/profileUserEmailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/jane_email_com" />

                <!-- Info that can change -->

                <!-- Username -->
                <TextView
                    android:id="@+id/profileNameWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="left"
                    android:text="@string/warning"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/profileNameViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="20dp"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/profileNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:importantForAutofill="no" />


                <!-- Email -->
                <TextView
                    android:id="@+id/profileEmailWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="left"
                    android:text="@string/warning"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/profileEmailViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="20dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/profileEmailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="@string/test_gmail_com"
                    android:inputType="text"
                    android:importantForAutofill="no" />


                <!-- Address -->
                <TextView
                    android:id="@+id/profileAddressWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="left"
                    android:text="@string/warning"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/profileAddressViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="20dp"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/profileAddressEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="@string/athens_str_95"
                    android:inputType="text"
                    android:importantForAutofill="no" />


                <!-- Phone -->
                <TextView
                    android:id="@+id/profilePhoneWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="left"
                    android:text="@string/warning"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/profilePhoneViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="20dp"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/profilePhoneEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="@string/_6987548536"
                    android:inputType="text"
                    android:importantForAutofill="no" />


                <!-- Photo -->
                <TextView
                    android:id="@+id/profilePhotoWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/warning"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/profilePhotoViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="20dp"
                    android:text="@string/photo" />

                <EditText
                    android:id="@+id/profilePhotoEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="@string/photo_path_png"
                    android:inputType="text"
                    android:importantForAutofill="no" />


                <!-- Buttons -->
                <Button
                    android:id="@+id/saveProfileInfoChangesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/becomeHostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/become_a_host" />


            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>