<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReservationDoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/reservationDoneBoldText"
            android:layout_width="262dp"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/your_reserv"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/reservationDoneImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/reservationDoneText"
            android:layout_width="262dp"
            android:layout_height="56dp"
            android:layout_marginBottom="50dp"
            android:text="@string/press_below_"
            android:gravity="center"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/reservationDoneHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page" />
    </LinearLayout>

    <include
        layout="@layout/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"/>

</LinearLayout>